--- a/exemplo2_ingressos/index.html
+++ b/exemplo2_ingressos/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Inicial VIO</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-<header>
-    <div class="logo">
-        <img src="c3f14085fdb4060c8a4c7313055b9e02-symbol-fa-r-kinokarten.webp">
-        `<h1>IngressosFácil</h1>
-    </div>
-    <p>Compre seus ingressos com facilidade</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Páginas de VIO</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="Senai-Logo.webp" alt="Senai-Logo.webp" />
+        <h1>IngressosFácil</h1>
+      </div>
+      <p>Compre seus ingressos com facilidade</p>
+      <nav>
+        <ul>
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#eventos">Eventos</a></li>
+          <li><a href="#sobre">Sobre Nós</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <nav>
-        <u1>
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#eventos">Eventos</a></li>
-            <li><a href="#sobre">Sobre Nós</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </u1>
-    </nav>
-</header>
-</body>
+    <main>
+      <section id="home">
+        <h2>Bem-vindo(a) ao IngressoFácil</h2>
+        <p>Aqui você encontra os melhores enventos da sua cidade</p>
+      </section>
+
+      <section id="eventos">
+        <h2>Proximos Eventos</h2>
+        <div class="eventos-container">
+          <div class="eventos-item">
+            <h3>Show de Rock</h3>
+            <p>Data: 25 de setembro de 2025</p>
+          </div>
+          <div class="eventos-item">
+            <h3>Teatro: A Comédia da Vida</h3>
+            <p>Data: 30 de outubro de 2025</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="sobre">
+        <h2>Sobre nós</h2>
+        <p>
+          Somos uma empresa dedicada a facilitar a compra de ingressos para
+          eventos culturais e esportivos
+        </p>
+      </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 IngressosFácil - Todos os direitos reservados</p>
+    </footer>
+  </body>
 </html>
